bankapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: bankapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bankapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankapp-frontend
            port:
              number: 80
